fixes to extesnsion

--- a/news-fact-checker/extension/sidebar.css
+++ b/news-fact-checker/extension/sidebar.css
@@ -285,7 +285,7 @@ button:disabled::before {
   overflow: hidden;
 }
 
-.status::before {
+.status.loading::before {
   content: '';
   position: absolute;
   top: 50%;
